--- a/style.css
+++ b/style.css
@@ -101,9 +101,28 @@ padding-left: 80px;
     
 }
 /*  section 3/ background  */
-.background{
-   margin-top: 120px;
-   width: 100%;
-   height: 500px;
-   
+#background{
+    background-color:  aliceblue;
+    
+    height: 350px;
+    margin-top: 100px;
+    background-position: center;
+    background-repeat: no-repeat;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+
+}
+.back-tittle{
+    text-align: center;
+}
+.color{
+    color: red;
+}
+/* .mid{
+    background-color: azure;
+    height: 80px;
+} */
+.buttonn{
+    color: red;
 }
