--- a/style.css
+++ b/style.css
@@ -126,3 +126,9 @@ padding-left: 80px;
 .buttonn{
     color: red;
 }
+/*  section 4  */
+.mid{
+    margin-top: 100px;
+    height: 600px;
+    background-color: azure;
+}
