--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@
     line-height: 30px;
     /* 166.667% */
     padding-left: 80px;
+    
 }
 
 .button {
@@ -228,7 +229,7 @@
     font-style: normal;
     font-weight: 500;
     line-height: normal;
-    padding-left: 400px;
+   
 }
 
 .greenn {
@@ -280,6 +281,7 @@
 .well {
     color: #F00;
     margin-left: 40px;
+    margin-top: 100px;
 }
 
 #wee {
