--- a/style.css
+++ b/style.css
@@ -268,7 +268,7 @@
 }
 
 #fresh {
-    margin-bottom: -35px;
+    margin-bottom: -150px;
 }
 
 #flex {
@@ -419,3 +419,7 @@ text-align: right;
 padding-top: 190px;
 padding-right: 20px;
  }
+#intel{
+    margin-left: 100px;
+    
+}
